--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,3 +6,10 @@ WORKDIR /usr/src/app
 COPY package.json pnpm-lock.yaml ./
 RUN pnpm install
 
+FROM base AS build
+WORKDIR /usr/src/app
+COPY . .
+COPY --from=dependencies /usr/src/app/node_modules ./node_modules
+RUN pnpm build
+RUN pnpm prune --prod
+
