--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,11 @@
   "description": "O pass.in é uma aplicação de **gestão de participantes em eventos presenciais**.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts"
+    "start": "node dist/server.mjs",
+    "build": "tsup src --format esm",
+    "dev": "tsx watch --env-file .env src/server.ts",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +17,10 @@
     "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@types/node": "20.11.30",
     "prisma": "5.11.0",
+    "tsup": "8.0.2",
     "tsx": "4.7.1",
     "typescript": "5.4.3"
   },
@@ -23,6 +29,7 @@
     "@fastify/swagger": "8.14.0",
     "@fastify/swagger-ui": "3.0.0",
     "@prisma/client": "5.11.0",
+    "dayjs": "1.11.10",
     "fastify": "4.26.2",
     "fastify-type-provider-zod": "1.1.9",
     "zod": "3.22.4"
