fix typo on CI yml;

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
 
       - name: Generate SHA
       - id: generate_sha
-      - run: |
-        SHA=$(echo $GITHUB_SHA | head -c7)
-        echo "sha=$SHA" >> $GITHUB_OUTPUT
+        run: |
+          SHA=$(echo $GITHUB_SHA | head -c7)
+          echo "sha=${SHA}" >> $GITHUB_OUTPUT
       
       - name: Build docker image
         run: docker build -t archsoup/passin:${{steps.generate_sha.outputs.sha}} -f ./api/Dockerfile
