--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,15 @@ on:
 
 jobs:
   build-and-push:
+    name: 'Build and push'
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Generate SHA
-      - id: generate_sha
+        id: generate_sha
         run: |
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=${SHA}" >> $GITHUB_OUTPUT
