chores ci docker; misc edit Dockerfile relative path;

--- a/api/.github/workflows/ci.yml
+++ b/api/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
           echo "sha=${SHA}" >> $GITHUB_OUTPUT
       
       - name: Build docker image
-        run: docker build -t archsoup/passin:${{steps.generate_sha.outputs.sha}} -f ./api/Dockerfile
+        run: docker build -t archsoup/passin:${{steps.generate_sha.outputs.sha}} .
