--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,13 @@ jobs:
       
       - name: Build docker image
         run: docker build -t archsoup/passin:${{steps.generate_sha.outputs.sha}} -f api/Dockerfile api
+
+      - name: Login into the container registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push image
+        run: |
+          docker push archsoup/passin:${{steps.generate_sha.outputs.sha}}
