--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,5 @@ jobs:
       - name: Push image
         run: |
           docker push archsoup/passin:${{steps.generate_sha.outputs.sha}}
+          docker tag archsoup/passin:${{steps.generate_sha.outputs.sha}} archsoup/passin:latest
+          docker push archsoup/passin:latest
