--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -9,9 +9,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_DB=passin
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - 'db:/var/lib/postgresql/data'
     networks:
