raw update env example file;

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,10 @@
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="postgresql://user:pass@dbname:port/db"
 API_BASE_URL="http://localhost:3333"
 PORT=3333
+
+POSTGRES_DB="string"
+POSTGRES_USER="string"
+POSTGRES_PASSWORD="string"
+
+DO_PG_USER="string"
+DO_PG_PASSWORD="string"
