--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,13 +16,14 @@ RUN pnpm prune --prod
 FROM node:20-alpine3.19 as deploy
 WORKDIR /usr/src/app
 RUN npm i -g pnpm prisma
+RUN apk add --no-cache bash
 COPY --from=build /usr/src/app/dist ./dist
 COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/package.json ./package.json
 COPY --from=build /usr/src/app/prisma ./prisma
+COPY --from=build /usr/src/app/wait-for-it.sh ./wait-for-it.sh
+RUN ls /usr/src/app
 RUN pnpm prisma generate
-COPY wait-for-it.sh /wait-for-it.sh
-RUN chmod +x /wait-for-it.sh
+RUN chmod a+x ./wait-for-it.sh
 
-EXPOSE 3333
-CMD [ "/wait-for-it.sh", "postgres:5432", "--", "pnpm", "start" ]
+CMD [ "./wait-for-it.sh", "postgres:5432", "--", "pnpm", "start" ]
