--- a/api/k8s/deployment.yaml
+++ b/api/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: nginx-deployment
+  name: passin-deployment
   labels:
     app: passin
 
@@ -21,7 +21,7 @@ spec:
         image: archsoup/passin:43795ae
         env:
         - name: DATABASE_URL
-          value: postgresql://admin:admin@postgres:5432/passin
+          value: "postgresql://admin:admin@postgres:5432/passin"
           # value: "postgresql://${DO_PG_USER}:${DO_PG_PASSWORD}@nlw-unite-cluster-do-user-16235693-0.c.db.ondigitalocean.com:25060/nlw-unite?sslmode=require"
         - name: API_BASE_URL
           value: "http://localhost:3333"
