fix postgres local url on secret;

--- a/api/k8s/secret.yaml
+++ b/api/k8s/secret.yaml
@@ -6,4 +6,5 @@ metadata:
 type: Opaque
   
 data:
-  url: "echo 'secret conn url' | base64"
+  url: "cG9zdGdyZXNxbDovL2FkbWluOmFkbWluQHBvc3RncmVzOjU0MzIvcGFzc2luCg=="
+  # url: "echo 'secret conn url' | base64"
