fix db link on docker-compose n deploy.yaml to DO;

--- a/api/k8s/secret.yaml
+++ b/api/k8s/secret.yaml
@@ -6,5 +6,5 @@ metadata:
 type: Opaque
   
 data:
-  url: "cG9zdGdyZXNxbDovL2FkbWluOmFkbWluQHBvc3RncmVzOjU0MzIvcGFzc2luCg=="
-  # url: "echo 'secret conn url' | base64"
+  # url: "cG9zdGdyZXNxbDovL2FkbWluOmFkbWluQHBvc3RncmVzOjU0MzIvcGFzc2luCg=="
+  url: "echo 'secret conn url' | base64"
