--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,13 @@ jobs:
           docker push archsoup/passin:${{steps.generate_sha.outputs.sha}}
           docker tag archsoup/passin:${{steps.generate_sha.outputs.sha}} archsoup/passin:latest
           docker push archsoup/passin:latest
+      
+      - name: Update image tag
+        uses: fjogeleit/yaml-update-action@main
+        with:
+         branch: main
+         valueField: 'api/deploy/values.yaml'
+         propertyPath: 'image.tag'
+         value: ${{steps.generate_sha.outputs.sha}}
+         commitChanges: true
+         commitMessage: 'deploy: Updated image tag in values helm for argocd'
