--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,29 +4,26 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-and-push:
-    name: 'Build and push'
+    name: "Build and push"
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Generate SHA
+      - name: Generate sha
         id: generate_sha
         run: |
           SHA=$(echo $GITHUB_SHA | head -c7)
           echo "sha=${SHA}" >> $GITHUB_OUTPUT
-      
-      - name: Build docker image
-        run: docker build -t archsoup/passin:${{steps.generate_sha.outputs.sha}} -f api/Dockerfile api
 
-      - name: Login into the container registry
+      - name: Build docker image
+        run: docker build -t archsoup/passin:${{ steps.generate_sha.outputs.sha }} .
+
+      - name: Log into the container registry
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -34,16 +31,16 @@ jobs:
 
       - name: Push image
         run: |
-          docker push archsoup/passin:${{steps.generate_sha.outputs.sha}}
-          docker tag archsoup/passin:${{steps.generate_sha.outputs.sha}} archsoup/passin:latest
+          docker push archsoup/passin:${{ steps.generate_sha.outputs.sha }}
+          docker tag archsoup/passin:${{ steps.generate_sha.outputs.sha }} archsoup/passin:latest
           docker push archsoup/passin:latest
-      
+
       - name: Update image tag
         uses: fjogeleit/yaml-update-action@main
         with:
-         branch: main
-         valueField: 'api/deploy/values.yaml'
-         propertyPath: 'image.tag'
-         value: ${{ steps.generate_sha.outputs.sha }}
-         commitChanges: true
-         commitMessage: 'deploy: Updated image tag in values helm for argocd'
+          branch: main
+          valueFile: "deploy/values.yaml"
+          propertyPath: "image.tag"
+          value: "${{ steps.generate_sha.outputs.sha }}"
+          commitChange: true
+          message: "deploy: Updated image tag in values helm for argocd"
