misc: force tag update to test cargocd;

--- a/api/deploy/templates/secret.yaml
+++ b/api/deploy/templates/secret.yaml
@@ -7,4 +7,4 @@ type: Opaque
   
 data:
   # url: "cG9zdGdyZXNxbDovL2FkbWluOmFkbWluQHBvc3RncmVzOjU0MzIvcGFzc2luCg=="
-  url: "echo 'secret conn url' | base64"
+  url: "echo_'secret-conn-url'|base64"
