misc(yaml): secret back url;DANGER

--- a/api/deploy/templates/secret.yaml
+++ b/api/deploy/templates/secret.yaml
@@ -7,4 +7,5 @@ type: Opaque
   
 data:
   # url: "cG9zdGdyZXNxbDovL2FkbWluOmFkbWluQHBvc3RncmVzOjU0MzIvcGFzc2luCg=="
-  url: "echo_'secret-conn-url'|base64"
+  # url: "echo 'secret conn url' | base64"
+  url: "cG9zdGdyZXNxbDovL2RvYWRtaW46QVZOU19CbGV1dnFRVEZ0NnNkUzBlM1JZQG5sdy11bml0ZS1jbHVzdGVyLWRvLXVzZXItMTYyMzU2OTMtMC5jLmRiLm9uZGlnaXRhbG9jZWFuLmNvbToyNTA2MC9ubHctdW5pdGU/c3NsbW9kZT1yZXF1aXJlCg=="
